# MindStream

./: .cursorignore  .gitignore  README.md  main.py  pyproject.toml
converter/: json_to_csv_converter.py
crawler/: data_crawler.py
jwt/: package.json
salesforce_metadata/mindstream/: sfdx-project.json
salesforce_metadata/mindstream/data_cloud/OAS_schemas/: Document.yaml
salesforce_metadata/mindstream/force-app/main/default/connectedApps/: dc_injest.connectedApp-meta.xml
salesforce_metadata/mindstream/mdapi/: package.xml
salesforce_metadata/mindstream/mdapi/connectedApps/: dc_injest.connectedApp
src/ingestor/: data_cloud_bulk_ingest.py
src/mindstream_project/: main.py
src/mindstream_project/auth/: jwt_auth.py
src/mindstream_project/converter/: json_to_csv_converter.py
src/mindstream_project/crawler/: data_crawler.py
src/mindstream_project/ingestor/: data_cloud_bulk_ingest.py
src/mindstream_project/models/: global_config.py  org_config.py
src/mindstream_project/utils/: config_manager.py  logging_config.py  salesforce_cli.py
