[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["crawler", "ingestor", "converter"]

[project]
name = "mindstream_project"
version = "0.1.0"
description = "A package for crawling data, converting JSON to CSV, and ingesting data to Salesforce Data Cloud via the Bulk Ingest API."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Damien Fleminks", email = "damien@fleminks.com"}
]
dependencies = [
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3"
]

[project.scripts]
mindstream = "main:main"