[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindstream-project"
version = "0.1.0"
description = "A package for crawling data, converting JSON to CSV, and ingesting data to Salesforce Data Cloud via the Bulk Ingest API."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Damien Fleminks", email = "damien@fleminks.com"}
]
dependencies = [
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3",
    "python-dotenv>=0.19.0"  # Add this if you plan to use dotenv
]

[project.scripts]
mindstream = "mindstream_project.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mindstream_project*"]
